fixed align customer menu

--- a/index.css
+++ b/index.css
@@ -199,3 +199,8 @@ button{
     text-align: center;
     font-family:'Noto Sans HK', sans-serif;
 }
+#customer{
+    display: flex;
+flex-direction: row;
+justify-content: space-around;
+}
